tests/agl/rejections/match/redundant_impossible_typed_literal.agl
let value: int = 1
case value of
  | 1.5 => ()
  | _ => ()
